:tada: craete directive

--- a/src/components/rockband/rockband.html
+++ b/src/components/rockband/rockband.html
@@ -5,7 +5,7 @@
       {{ rockband.title }}
     </ion-card-title>
     <p>{{ rockband.text }}</p>
-    <button ion-button>Hola</button>
+    <button ion-button (click)="showAlert()">Hola</button>
     <button ion-button color="danger">call</button>
     <button ion-button color="dark">sms</button>
   </ion-card-content>
